Problèmes insertion et sqitch deploy réglés

--- a/migrations/sqitch.conf
+++ b/migrations/sqitch.conf
@@ -3,6 +3,6 @@
 	# plan_file = sqitch.plan
 	# top_dir = .
 # [engine "pg"]
-	# target = db:pg:
+	target = db:pg://omedocs:omedocs@localhost/omedocs
 	# registry = sqitch
 	# client = /bin/psql
