--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
   "name": "projet-antigaspi-medicaments-back",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:O-clock-Pan/projet-antigaspi-medicaments-back.git",
-  "author": "Zachary Bournand <zacharybournand@gmail.com>",
-  "license": "MIT",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/O-clock-Pan/projet-antigaspi-medicaments-back.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/O-clock-Pan/projet-antigaspi-medicaments-back/issues"
+  },
+  "homepage": "https://github.com/O-clock-Pan/projet-antigaspi-medicaments-back#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
