--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/O-clock-Pan/projet-antigaspi-medicaments-back#readme",
   "dependencies": {
+    "argon2": "^0.27.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0"
   },
   "devDependencies": {
