--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
+    "randomstring": "^1.1.5",
     "react-stripe-checkout": "^2.6.3",
     "stripe": "^8.145.0",
     "uuid": "^8.3.2"
